// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchResult snapshots multiple users renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-3"
    >
      <div
        className="jumbotron"
      >
        <a
          href="/user/Test"
          onClick={[Function]}
        >
          <h4
            className="text-center"
          >
            Test
          </h4>
          <img
            className=""
            src="testImage"
            width="100%"
          />
        </a>
      </div>
    </div>
    <div
      className="col-md-3"
    >
      <div
        className="jumbotron"
      >
        <a
          href="/user/Test2"
          onClick={[Function]}
        >
          <h4
            className="text-center"
          >
            Test2
          </h4>
          <img
            className=""
            src="testImage2"
            width="100%"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`searchResult snapshots no users renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  />
</div>
`;

exports[`searchResult snapshots single user renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-3"
    >
      <div
        className="jumbotron"
      >
        <a
          href="/user/Test"
          onClick={[Function]}
        >
          <h4
            className="text-center"
          >
            Test
          </h4>
          <img
            className=""
            src="testImage"
            width="100%"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
